force-app/main/default/objects/OneCRM__Sync_Queue__c/OneCRM__Sync_Queue__c.object-meta.xml
<CustomObject>
    <label>Sync Queue</label>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>