force-app/main/default/objects/OneCRM__Sync_Queue__c/fields/OneCRM__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>