force-app/main/default/objects/OneCRM__Sync_Queue__c/fields/OneCRM__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>