force-app/main/default/objects/OneCRM__Sync_Queue__c/fields/OneCRM__Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>