force-app/main/default/objects/OneCRM__Sync_Queue__c/fields/OneCRM__Status_Details__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Status_Details__c</fullName>
    <label>Status Details</label>
    <type>TextArea</type>
</CustomField>