force-app/main/default/objects/OneCRM__Sync_Queue__c/fields/OneCRM__Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Sync_Type__c</fullName>
    <label>Sync Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>