force-app/main/default/objects/OneCRM__Sync_Queue__c/fields/OneCRM__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Unique_Key__c</fullName>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>